--- a/execute-node.html
+++ b/execute-node.html
@@ -1,31 +1,26 @@
 <script type="text/javascript">
-    RED.nodes.registerType('clearbit-execute', {
+    RED.nodes.registerType('torrent-search-api-execute', {
         category: "enrichment",
         defaults: {
-            name: { value: "Clearbit - Execute" },
-            host: { value: "", type: "clearbit-config" }
+            name: { value: "torrent-search-api - Execute" },
         },
         inputs: 1,
         outputs: 1,
         icon: "white-globe.png",
         color: "#a6bbcf",
         label: function() {
-            return (this.name || "clearbit-execute")
+            return (this.name || "torrent-search-api-execute")
         }
     });
 </script>
 
-<script type="text/x-red" data-template-name="clearbit-execute">
+<script type="text/x-red" data-template-name="torrent-search-api-execute">
     <div class="form-row">
         <label for="node-input-name"><i class="icon-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
     </div>
-    <div class="form-row">
-        <label for="node-input-host"><i class="icon-bookmark"></i> Config</label>
-        <input type="text" id="node-input-host">
-    </div>
 </script>
 
-<script type="text/x-red" data-help-name="clearbit-execute">
+<script type="text/x-red" data-help-name="torrent-search-api-execute">
 
 </script>
